moved execution of java to a script. added ulimit -t